--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,16 +8,15 @@
 		      	<%= image_tag "banner-logo.svg", class: "logo-works" %>
 		      </div>
 		  	<div class="col-12 col-sm-6">
-		  		
 		  	</div>
 		    </div>
 		  </div>
 		</div>
-
 	</div>
 </div> 
 <%= render "shared/featured_artist" %>
 <%= render "shared/quote_block" %>
+<%= render 'shared/featured_artworks' %>
 <%= render "shared/featured-stories" %>
 
 
