--- a/app/views/shared/_about_section.html.slim
+++ b/app/views/shared/_about_section.html.slim
@@ -1,7 +1,7 @@
 .about-section-wrapper
   .about-section.container
     h3.title.t-about.text-center
-      | Who we are
+      | Meet The Team
     .row
       .person-lockup.col-12.col-sm-6
         .d-flex.align-items-end.justify-content-center
@@ -41,8 +41,8 @@
           | Our Philosophy
         br
         p.color.c-dark-blue
-          b
-            | Competition is outdated
-          | , to respond to the biggest challenges our society is facing today, we believe that collaboration and altruism need to be the foundation of everything we do. By building this platform and community, we want to give the option of a different approach to the actors of the Art industry, for them to work and grow together in a fair and innovative way. We are building Artyque with all the necessary business acumen but also with all the possible creativity and sensitivity in order to be able to ally collective effort, common good and strategic growth for each one of our members. 
+          | To respond to the biggest challenges our societies are facing today, we believe that collaboration needs to be the foundation of everything we do. By opening this agency and gathering a great community around it, we want to give the option of a fresh approach to all the actors of the Art world, for them to grow together in a more rewarding way. 
+          <br>
+          | We are building ARTYQUE with all the business expertise and creative approach necessary to ally individual effort with strategic collaboration for the benefit of each one of our members.
   .square-1
   .square-2
