--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,18 @@
-<div id="mission"></div>
+<div id="mission">
+	<h4 class="title color c-white">OUR PHILOSOPHY</h4>
+	<br>
+	<p class="color c-white">We are a young Berlin based agency dedicated to the success of the new generation of emerging and mid-career Artists. Our mission is to support the most exceptional creative minds out there to develop their career and share their vision and Art with the world. </p>
+</div>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
 
+
+<div id="about"></div>
+<%= render 'shared/about_section' %>
 <div class="laptop-carousel-wrapper">
 	<div class="container">
 		<div class="col intro-laptop">
-			<h4 class="title">We represent</h1>
-			<h2 class="color c-blue">Artists</h2>
+			<h4 class="title text-center">join the artyque family</h1>
 		</div>
 	</div>
   <%= render 'shared/carousel', laptop: true, initial: 1, height: 350, images: %w[
@@ -20,12 +26,4 @@
 			<a href="#contact" class="button-primary">Get in Touch</a>
 		</div>
 	</div>
-</div>
-
-<div id="about"></div>
-<%= render 'shared/about_section' %>
-
-<div id="contact"></div>
-<div class="form-set">
-  <%= render 'contact_forms/new' %>
 </div>
