--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -4,9 +4,9 @@
 			<div class="backround bg-white shadow sb-light card card-artists"  data-toggle="modal" data-target="#modal_artist">
 				<div class="d-flex">
 					<div class="text-cards">
-						<h4 class="title">An Agency</h4>
+						<h4 class="title">An Agent</h4>
 			      		<h5 class="color c-blue card-title">For Artists</h5>
-			      		<p class="mw-50">Combine the expertise that an agent can offer with the power of<br> connection only a digital platform can provide.</p>
+			      		<p class="mw-50">Our mission is to help highly promising artists take their art <br>and message beyond their borders, gain international<br> recognition and in the process, increase their artistic value.  </p>
 			      		<p class="fake-link color c-blue">Read More</p>
 		      		</div>
 		      		<%= image_tag "pic-1.png", class: "d-none d-sm-block" %>
@@ -17,9 +17,9 @@
 			<div class="backround c-light-gray bg-blue shadow sb-light card card-galleries" data-toggle="modal" data-target="#modal_galleries">
 				<%= image_tag "pic-2.png", style: "width: 100%" %>
 				<div class="text-cards">
-				<h4 class="color c-white title">A Solution</h4>
+				<h4 class="color c-white title">A Partner</h4>
 		      	<h5 class="color c-white card-title">For Galleries</h5>
-		      	<p>Better than a personal assistant.</p>	
+		      	<p>We carefully research and select the best artists around to bring them to Art galleries across Europe. We always look for the most interesting and unique creators that will make your Art space stand out. </p>	
 		      	<p class="fake-link color c-white">Read More</p>
 	      	</div>
 			</div>
@@ -27,9 +27,9 @@
 		<div class="col-12 col-sm-6">
 			<div class="backround bg-white shadow sb-light card card-collectors" data-toggle="modal" data-target="#modal_collectors">
 				<div class="text-cards">
-					<h4 class="title">An Advisor</h4>
+					<h4 class="title">An Opportunity</h4>
 		      		<h5 class="color c-blue card-title">For Collectors</h5>
-		      		<p>Invest like never before.</p>
+		      		<p>Art collecting that benefits to everyone, while ensuring the growth of your assets.</p>
 		      		<p class="fake-link color c-blue">Read More</p>
 	      		</div>
 			</div>
