--- a/app/views/news_posts/show.html.slim
+++ b/app/views/news_posts/show.html.slim
@@ -9,3 +9,12 @@
   .row.mt-3
     .col-12
       = md @news_post.content
+  .row.mt-5
+    .col-12.text-center
+      - if @previous_post
+        = link_to "< Back", news_post_path(@previous_post), class: 'button-tertiary'
+      - if @previous_post && @next_post
+        span.m-3.c-light-gray
+          | |
+      - if @next_post
+        = link_to "Next >", news_post_path(@next_post), class: 'button-tertiary'
