--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,4 +17,4 @@
 <%= render "shared/featured_artist" %>
 <%= render "shared/quote_block" %>
 <%= render 'shared/featured_artworks' %>
-<%= render "shared/featured-stories" %>
+<%= render "shared/featured_stories" %>
