add news post date to cards

--- a/app/views/news_posts/show.html.slim
+++ b/app/views/news_posts/show.html.slim
@@ -4,7 +4,7 @@
       .inner-banner.w-100.position-relative.d-sm-flex.align-items-center.inner-banner-small
         .text-lockup
           h1.c-white = @news_post.headline
-          p.c-pink = @news_post.created_at.strftime('%A, %d %B, %Y')
+          p.c-pink = @news_post.created_at.strftime('%A, %d %B %Y')
 #main-content.container.pt-3
   .row.mt-3
     .col-12
