--- a/app/views/news_posts/index.html.slim
+++ b/app/views/news_posts/index.html.slim
@@ -1,11 +1,9 @@
-.wrapper-banner
-  .banner-content.bg-blue-gradient
-    .row
-      .inner-banner.w-100.position-relative.d-sm-flex.align-items-center.inner-banner-small
-        .text-lockup
-          h1.c-white News
-          p.c-pink
-            | Stay up to date with the latest information about our mission to reshape the art world.
+.secondary-banner
+  .banner-text
+    h1.title.c-white News
+    br
+    p.c-white
+      | Stay up to date with the latest information about our mission to reshape the art world.
 #main-content.container.pt-3
   .row
     - @news_posts.each do |news_post|
