--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,9 @@
-<div id="mission">
-	<h4 class="title color c-white">OUR PHILOSOPHY</h4>
-	<br>
-	<p class="color c-white">We are a young Berlin based agency dedicated to the success of the new generation of emerging and mid-career Artists. Our mission is to support the most exceptional creative minds out there to develop their career and share their vision and Art with the world. </p>
+<div class="secondary-banner">
+	<div class="banner-text">
+	  <h1 class="title color c-white">Our Philosophy</h1>
+	  <br>
+	  <p class="color c-white">We are a young Berlin based agency dedicated to the success of the new generation of emerging and mid-career Artists. Our mission is to support the most exceptional creative minds out there to develop their career and share their vision and Art with the world. </p>
+	</div>
 </div>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
