--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,17 +1,17 @@
 <div class="footer-top d-flex">
-  <ul class="legal-foot-note">
-  <h2 class="color c-white">Legal</h2>
+  <ul class="legal-foot-note links">
+    <h5 class="color c-white links">Legal</h5>
     <li> Service Terms & Conditions</li>
     <li>Maintenance Policy</li>
     <li>Privacy Policy</li>
     <li>Cookie Policy</li>
   </ul>
-  <ul class="legal-foot-note">
-    <h2 class="color c-white">Site Map</h2>
-    <li>Home</li>
-    <li>Contact</li>
-    <li>Our Artists</li>
-    <li>About</li>
+  <ul class="legal-foot-note links">
+    <h5 class="color c-white">Site Map</h5>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "Contact Us", contact_path %></li>
+    <li><%= link_to "Our Artists", artists_path %></li>
+    <li><%= link_to "About Us", about_path %></li>
   </ul>
 </div>
 <footer class="footer">
