FInished index artist + menu + cta on everypage takign to contact page

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,9 @@
 .form-set {
 	max-width: 500px;
     margin: auto;
+    background: white;
     padding: 26px;
+	border-radius: 4px;
 }
 
 ul.admin {
