--- a/app/views/news_posts/_card.html.slim
+++ b/app/views/news_posts/_card.html.slim
@@ -3,6 +3,7 @@
     h5 = news_post.headline
     = md_flat(truncate(news_post.content, length: 45))
     p.small.c-light-gray = news_post.created_at.strftime('%d %b %Y')
+    p Read More >>
   - if news_post.photo.present?
     .card-photo[style="background-image: url('#{cl_image_path news_post.photo}')"]
   - else
