--- a/app/views/pages/contact.html.slim
+++ b/app/views/pages/contact.html.slim
@@ -2,10 +2,11 @@
   div class=['banner-content', 'position-relative', 'bg-blue-gradient']
     .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible
       = inline_svg "top_wave", class: "wave-top position-absolute fill-pink"
-      = inline_svg "bottom_wave", class: "wave-bottom position-absolute fill-pink"
+      = inline_svg "bottom_wave", class: "small-wave-bottom wave-bottom position-absolute fill-pink"
       .col-12.col-md-6.text-shadow-light.c-pink
-        h2.display-center.display-3.c-white
+        h4.display-center.c-white
           | Get in touch
+        br
         p
           | We are always open for applications, collaborations and partnerships
         p
