--- a/app/views/shared/_featured_artworks.html.slim
+++ b/app/views/shared/_featured_artworks.html.slim
@@ -3,6 +3,7 @@
 		.row
 			div.col.d-flex.line-left
 				h4.title Featured Artwork
+	  .ellipse
 .container
 	.row
 		- @featured_artwork.each do |artwork|
