--- a/app/views/shared/_featured_stories.html.slim
+++ b/app/views/shared/_featured_stories.html.slim
@@ -10,5 +10,5 @@
       .col-12.col-sm-6.p-2.mb-2
         = render 'news_posts/card', news_post: news_post
   .row
-    .col-12.text-right
-      = link_to "Read More >>", news_posts_path
+    .col-12.text-center
+      = link_to "See All Articles", news_posts_path, class: "button-primary"
