--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/contact_cta" unless @contact_page %>
 <div class="footer-top d-flex">
   <ul class="legal-foot-note links">
     <h5 class="color c-white links">Legal</h5>
