--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -49,6 +49,54 @@
     }
 }
 
+.small-wave-bottom {
+	width: 40vw !important;
+}
+
+.cta-wrapper {
+	height: 400px;
+	background-size: cover;
+	background-position: center;
+	.cta-text {
+	    width: 100%;
+	    height: 100%;
+	    text-align: center;
+	    padding: 99px 0;
+	    h3 {
+	    	max-width: 870px;
+		    line-height: 46px;
+		    margin: auto;
+		    text-shadow: 1px 1px 30px black;
+	    }
+	}
+	.button-secondary {
+		color: white !important;
+	}
+}
+.artist-cards {
+	transition: ease .5s all;
+	margin-bottom: 25px;
+	a {
+		text-decoration: none;
+	}	
+	&-img {
+	height: 250px;
+	margin-bottom: 10px;
+	transition: ease .5s all;
+	border-radius: 3px;
+	background-size: cover;	
+	background-position: center;
+	}
+	&:hover {
+		transform: translateY(-3px);
+		.artist-cards-img {
+		box-shadow: 1px 1px 20px gray;
+		}
+
+	}
+
+}
+
 .artwork-artist-index {
 	margin-top: -63px;
 }
