--- a/app/views/artists/index.html.slim
+++ b/app/views/artists/index.html.slim
@@ -13,7 +13,7 @@ div.artist-carousel
 							p.color.c-light-gray = artist.description
 							p.fake-link.color.c-blue Learn More >>
 						.col-6 
-							div.featured-artist-photo style="background-image:  linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{artist.photo});"
+							div.featured-artist-photo style="background-image: linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{artist.photo});"
 			.container.artwork-artist-index
 				h4.title.color.c-white Featured Artwork
 				.row.shadow-box.sb-dark
@@ -22,3 +22,19 @@ div.artist-carousel
 							.overlay
 								h2.color.c-white = artwork.name
 								p = artwork.description
+.line-wrapper
+  .container
+    .row
+      .col.d-flex.line-left
+        h4.title
+          | Meet the Artists
+        hr.lines.w-75
+  .ellipse
+.container
+	.row
+		- @artists.each do |artist|
+			.col-4.artist-cards
+				= link_to artist_path(artist) do
+					div.artist-cards-img style="background-image: url(#{artist.photo});"
+					h2 = artist.name
+					p.color.c-light-gray = artist.description
