--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,24 @@
 <header class="header">
-  <div class="image">
+  <div class="image d-flex justify-content-between w-100">
     <%= link_to root_path do %>
       <%= image_tag 'logo-header.svg', class: 'logo' unless @hidden_logo %>
     <% end %>
+    <ul class="navbar-items">
+    	<li class="active">Home</li>
+    	<li>Artists</li>
+    	<li>
+    		<div class="dropdown">
+			  <a id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    About us  <i class="fas fa-caret-down"></i>
+			  </a>
+			  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			    <a class="dropdown-item" href="#">News</a>
+			    <a class="dropdown-item" href="#">Contact</a>
+			    <a class="dropdown-item" href="#">Who we are</a>
+			  </div>
+			</div>
+		</li>
+    </ul>
   </div>
   <%= render 'shared/navbar' %>
 </header>
