--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,8 @@
 <div class="footer-top d-flex">
   <ul class="legal-foot-note links">
     <h5 class="color c-white links">Legal</h5>
-    <li> Service Terms & Conditions</li>
-    <li>Maintenance Policy</li>
-    <li>Privacy Policy</li>
-    <li>Cookie Policy</li>
+    <li><%= link_to "GDPR Policy", privacy_path %></li>
+    <li><%= link_to "Impressum", impressum_path %></li>
   </ul>
   <ul class="legal-foot-note links">
     <h5 class="color c-white">Site Map</h5>
