--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,13 @@
 		    <div class="col-23 col-sm-6 home-banner position-relative d-sm-flex align-items-center">
 		      	<%= image_tag "banner-logo.svg", class: "logo-works" %>
 		      </div>
-		  	<div class="col-12 col-sm-6">
+		  	<div class="col-12 col-sm-6 d-flex align-items-center">
+		  		<div class="text-lockup-banner">
+		  			<h4 class="title color c-white">Welcome to artyque</h4>
+		  			<h2 class="color c-white">Europe's Elite <br> Digital Art Agency</h2>
+		  			<br>
+		  			<%= link_to "Discover Our Talent", artists_path, class: "button-primary" %>
+		  		</div>
 		  	</div>
 		    </div>
 		  </div>
