--- a/app/views/artists/index.html.slim
+++ b/app/views/artists/index.html.slim
@@ -11,7 +11,8 @@ div.artist-carousel
 							h3.color.c-white = artist.name
 							br
 							p.color.c-light-gray = artist.description
-							p.fake-link.color.c-blue Learn More >>
+							p
+                = link_to "Learn More", artist_path(artist), class: "button-secondary"
 						.col-6 
 							div.featured-artist-photo style="background-image: linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{artist.photo});"
 			.container.artwork-artist-index
