--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,3 +16,4 @@ $white: white;
 $placeholder-gray: #bac0c5;
 $gold: #E6E0D4;
 $gold-gradient: linear-gradient(67.97deg, #E7F1E5 3.78%, #E60D4 112.76%);
+$medium-gray: #1f3d4a6b;
