--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -80,7 +80,10 @@
   li {
     padding: 3px 12px;
     transition: ease .5s all;
-    color: #1f3d4a6b;
+    color: $medium-gray;
+    a{
+      color: $medium-gray;
+    }
     &:hover {
       color: $blue;
       text-decoration:underline;
