--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,14 +12,8 @@
     <li><%= link_to "Our Artists", artists_path %></li>
     <li><%= link_to "About Us", about_path %></li>
   </ul>
-</div>
-<footer class="footer">
-  <div class="image">
-    <%= link_to root_path do %>
-      <%= image_tag 'logo-footer.svg', class: 'logo' %>
-    <% end %>
-  </div>
-  <ul class="links">
+  <ul class="legal-foot-note links">
+    <h5 class="color c-white">Account</h5>
     <li id="login-button">
       <% if user_signed_in? %>
         <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
@@ -39,4 +33,11 @@
       <% end %>
     <% end %>
   </ul>
+</div>
+<footer class="footer">
+  <div class="image">
+    <%= link_to root_path do %>
+      <%= image_tag 'logo-footer.svg', class: 'logo' %>
+    <% end %>
+  </div>
 </footer>
