fix up contact cta responsiveness

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/contact_cta" unless @contact_page %>
-<div class="footer-top d-flex">
+<div class="footer-top d-block d-sm-flex">
   <ul class="legal-foot-note links">
     <h5 class="color c-white links">Legal</h5>
     <li><%= link_to "GDPR Policy", privacy_path %></li>
