--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,7 +54,8 @@
 }
 
 .cta-wrapper {
-	height: 400px;
+	min-height: 25rem;
+  height: auto;
 	background-size: cover;
 	background-position: center;
 	.cta-text {
