--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <%= link_to root_path do %>
       <%= image_tag 'logo-header.svg', class: 'logo' unless @hidden_logo %>
     <% end %>
-    <ul class="navbar-items">
+    <ul class="navbar-items d-sm-flex d-none">
       <li class="active"><%= link_to "Home", root_path %></li>
       <li><%= link_to "Artists", artists_path %></li>
     	<li>
