--- a/app/views/shared/_featured_artist.html.slim
+++ b/app/views/shared/_featured_artist.html.slim
@@ -11,6 +11,7 @@ div.artist-carousel
 							h3 = artist.name
 							br
 							p.color.c-light-gray = artist.description
-							p.fake-link.color.c-blue Learn More >>
+              p
+                = link_to "Learn More >>", artist_path(artist)
 						.col-6 
 							div.featured-artist-photo style="background-image: url(#{artist.photo});"
