--- a/app/views/shared/_featured_artist.html.slim
+++ b/app/views/shared/_featured_artist.html.slim
@@ -4,7 +4,7 @@ div.artist-carousel
 			.contain-featured-artist
 				.container-fluid
 					.row
-						.col-6.info-side
+						.col-12.col-sm-6.info-side
 							hr.features-arrtist-line
 							h4.title Featured Artist
 							br
@@ -12,5 +12,5 @@ div.artist-carousel
 							br
 							p.color.c-light-gray = artist.description
 							p.fake-link.color.c-blue Learn More >>
-						.col-6 
+						.col-12.col-sm-6
 							div.featured-artist-photo style="background-image: url(#{artist.photo});"
