--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,5 +20,7 @@
 		</li>
     </ul>
   </div>
-  <%= render 'shared/navbar' %>
+  <div class="hidden-sm-up">
+  	<%= render 'shared/navbar' %>
+  </div>
 </header>
