--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,24 +4,31 @@
 	overflow: hidden;
 	.info-side {
 	    z-index: 1000;
-		padding: 68px 100px;
-		height: 400px;
+		padding: 20px;
 	    flex-direction: column;
 	    justify-content: center;
 		hr {
 			width: 200%;
 		    border: solid 1px $beige;
 		}
+		 @include media-breakpoint-up(sm) {
+   			padding: 68px 100px;
+			height: 400px;
+      }
 	}
 	.featured-artist-photo {
 		background-size: cover;
 	    background-position: center;
 	  	border-radius: 60% 0 0 60%;
-	    height: 660px;
 	    width: 110%;
-	    left: 0px;
-	    top: -88px;
-	    position: absolute;
+	    height: 280px;
+	    position: relative;
+	    @include media-breakpoint-up(sm) {
+		    left: 0px;
+		    top: -88px;
+   			position: absolute;
+			height: 660px;
+      }
 	}
 }
 
@@ -137,19 +144,27 @@
 }
 
 .home-banner {
-	height: 80vh;
+	height: 30vh;
 	.logo-works {
 	    width: 74%;
 	    position: absolute;
 	    top: -100px;
 	    left: -21px;
 	}
+	 @include media-breakpoint-up(sm) {
+   			height: 80vh;
+      }
 }
 
 .text-lockup-banner {
+	 padding: 30px 38px;
+   	 margin-bottom: 80px;
 	 h2 {
 	 	font-size: 30px; 
 	 }
+	  @include media-breakpoint-up(sm) {
+   			margin-bottom: 0;
+      }
 }
 
 .intro-text {
