--- a/app/views/artists/index.html.slim
+++ b/app/views/artists/index.html.slim
@@ -4,7 +4,7 @@ div.artist-carousel
 			.contain-featured-artist.background.bg-dark-blue
 				.container-fluid
 					.row
-						.col-6.info-side
+						.col-12.col-sm-6.info-side
 							hr.features-arrtist-line
 							h4.title.color.c-white Featured Artist
 							br
@@ -12,13 +12,13 @@ div.artist-carousel
 							br
 							p.color.c-light-gray = artist.description
 							p.fake-link.color.c-blue Learn More >>
-						.col-6 
+						.col-12.col-sm-6 
 							div.featured-artist-photo style="background-image: linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{artist.photo});"
-			.container.artwork-artist-index
+			.container.artwork-artist-index.d-none.d-sm-block
 				h4.title.color.c-white Featured Artwork
 				.row.shadow-box.sb-dark
 					- artist.artworks.highlights.each do |artwork|
-						div.col-4.featured-artwork-photo style="background-image: url(#{artwork.photos.first.attachment.url unless !artwork.photos.present? });" 
+						div.col-12.col-sm-4.featured-artwork-photo style="background-image: url(#{artwork.photos.first.attachment.url unless !artwork.photos.present? });" 
 							.overlay
 								h2.color.c-white = artwork.name
 								p = artwork.description
@@ -33,7 +33,7 @@ div.artist-carousel
 .container
 	.row
 		- @artists.each do |artist|
-			.col-4.artist-cards
+			.col-12.col-sm-4.artist-cards
 				= link_to artist_path(artist) do
 					div.artist-cards-img style="background-image: url(#{artist.photo});"
 					h2 = artist.name
