--- a/app/views/shared/_quote_block.html.slim
+++ b/app/views/shared/_quote_block.html.slim
@@ -1,7 +1,7 @@
 div.quotation.background.bg-dark-blue id="quotation-home"
   p.color.c-white
     q.home-quote
-      = "This artist is the best artist this generation has to offer for the future"
+      = "To respond to the biggest challenges our societies are facing today, we believe that collaboration needs to be the foundation of everything we do"
   br
   h4.title.color.c-white
-    | Martin de Frutos
+    | - Artyque Team
