--- a/app/views/artists/index.html.slim
+++ b/app/views/artists/index.html.slim
@@ -16,7 +16,7 @@
                 p
                   = link_to "Learn More", artist_path(artist), class: "button-secondary"
               .col-6 
-                div.featured-artist-photo style="background-image: linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{artist.photo});"
+                div.featured-artist-photo style="background-image: linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{cl_image_path artist.photo if artist.photo.present?});"
         .container.artwork-artist-index.d-none.d-sm-block
           h4.title.color.c-white Featured Artwork
           = render 'artworks/gallery', artworks: artist.artworks.highlights
@@ -33,7 +33,7 @@
       - @artists.each do |artist|
         .col-12.col-sm-4.artist-cards
           = link_to artist_path(artist) do
-            div.artist-cards-img style="background-image: url(#{artist.photo});"
+            div.artist-cards-img style="background-image: url(#{cl_image_path artist.photo if artist.photo.present?});"
             h2 = artist.name
             p.color.c-light-gray = artist.description
   = render 'shared/stim_modal'
