--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -1,8 +1,8 @@
 .wrapper-banner#banner
   div class=['banner-content', 'position-relative', 'bg-blue-gradient']
     .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible
-      = inline_svg "top_wave", class: "wave-top position-absolute fill-pink"
-      = inline_svg "bottom_wave", class: "wave-bottom position-absolute fill-pink"
+      = inline_svg "top_wave.svg", class: "wave-top position-absolute fill-pink"
+      = inline_svg "bottom_wave.svg", class: "wave-bottom position-absolute fill-pink"
       .col-12.col-sm-6.text-shadow-light.c-pink[style="word-wrap: break-word;"]
         h1.display-center.display-3.c-white
           | Impressum
