--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -11,6 +11,8 @@
           | Artyque UG
         p.mt-3
           | Rheinsberger Str. 76/77, 10115 Berlin
+        p
+          | VAT Number: DE325205290
         p.mb-0
           a.c-pink[href="mailto:info@artyque.com"]
             | info@artyque.com
