--- a/app/views/shared/_featured_artist.html.slim
+++ b/app/views/shared/_featured_artist.html.slim
@@ -13,5 +13,5 @@ div.artist-carousel
 							p.color.c-light-gray = artist.description
               p
                 = link_to "Learn More >>", artist_path(artist)
-						.col-6 
+						.col-12.col-sm-6 
 							div.featured-artist-photo style="background-image: url(#{artist.photo});"
