--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -12,18 +12,23 @@
               | Artyque For Artists
             br
             h4.color.c-blue.modal-lead-text
-              | Artyque for Artists is a new kind of service that allies the expertise of an agent with the power of connection only a digital platform can provide.
+              | ARTYQUE is a new kind of agency dedicated to the career growth of emerging and mid-career artists across Europe. 
           .container-fluid.separate-content-bottom
             .row
               .col-12.col-sm-6
-                | Acting on your behalf and only in your interest, we negotiate, organise and promote your exhibitions across Europe, find fundings for your projects, develop your provenance and ultimately increase the value of your works. 
+                | Acting on your behalf and only in your interest, we promote your work and organise your exhibitions across Europe, find fundings for your projects, develop your provenance, and ultimately increase the value of your works. Simply put, we are here to support your success, believe in your talent and become your ally. 
                 br
                 br
+              .col-12.col-sm-6
+                |  After signing with us you will get a personal agent with whom you will develop your digital portfolio on our website. We will then work our magic while you enjoy a stress-free creation process back to your studio.
+              .col-12.text-center
                 b.color.c-blue
                   | Your only task will be creating your next masterpiece.
-              .col-12.col-sm-6
-                |  After signing with us you will get a personal agent and access to our platform on which you will develop your profile and digital portfolio. We will then work our magic while you enjoy a stress-free creation process back to your studio. 
+                br
       .container-bullets
+        h2.link-title.text-center.color.c-blue
+          | ARTYQUE will:
+        br
         .w-100.wrapper-body-bullets.background.c-light-gray.bg-blue
           ul
             li
@@ -39,9 +44,10 @@
       .text-body.text-center.separate-content
         .body-title
           h3.title.text-center
-            | Artyque For Artists
+            | Change your career already today. <br>
+              Start working with us. 
           h4.color.c-blue.modal-lead-text
-            | We are here for your success.
+            | Send us your portfolio at info@artyque.com and let's <br> schedule an interview. 
         = link_to "Contact Us", contact_path, class: "button-primary"
 #modal_galleries.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
   .modal-dialog.modal-dialog-custom[role="document"]
@@ -54,38 +60,39 @@
         .text-body
           .body-title
             h3.title.text-center
-              | Artyque For Galleries
+              | Artyque For Partners
             br
             h4.color.c-blue.modal-lead-text
-              | Artyque for Galleries is a new kind of service that simplifies the way you look for Artists and organize your shows. 
+              | ARTYQUE is a new kind of agency that simplifies your artists research and selection process. 
           .container-fluid.separate-content-bottom
             .row
               .col-12.col-sm-6
-                | Following your preferences and specifications, we propose a selection of the top emerging artists from within our agency to you on a regular basis. Once you have chosen the artist for your next exhibition, we support you in the organisation of the show with our in-house curators, PR specialists and partners.
+                | We carefully scope regional markets (Europe, West Africa and Asia) and select the most promising artists in order to bring quality and singularity to your art space while you focus solely on developing your relationship with clients and grow your reputation. 
               .col-12.col-sm-6
-                | We carefully scope regional markets (Europe, West Africa, and Russia at the moment) and select the most promising artists in order to bring you quality and singularity to your art space while you focus solely on developing your relationship with clients and grow your reputation. 
+                | Following your preferences and specifications, we propose a selection of the top emerging artists from within our agency to you on a regular basis. Once you have chosen the artist for your next exhibition. We support you in the organisation of the show with our associated curators, PR Specialists and logistic partners. 
       .container-bullets
+        h2.link-title.text-center.color.c-blue
+            | ARTYQUE will:
+        br
         .w-100.wrapper-body-bullets.background.c-light-gray.bg-blue
           ul
             li
-              |  Simplify your artists’ hunt
+              |  Simplify your artist hunt
             li
               |  Collaborate with young and talented curators
             li
               |  Increase your press visibility
             li
               |  Reach new clients and establish a stronger relationship with existing ones
-            li
-              |  Get discounts from our partners (logistic, Insurance, digital services, and more)
       .text-body.text-center.separate-content
         .body-title
           h3.title.text-center
-            | Artyque For Galleries
+            | Artyque For Partners
           h4.color.c-blue.modal-lead-text
-            |  Get in touch now and gain early access at the 
+            |  Looking for your next big artist? We bring incredible 
             br
-            | opening of the Artyque platform
-        = link_to "Contact Us", contact_path, class: "button-primary"
+            | talents right to you while you run the show.
+        = link_to "Discover Out Talent", artists_path, class: "button-primary"
 #modal_collectors.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
   .modal-dialog.modal-dialog-custom[role="document"]
     .modal-content
@@ -100,34 +107,32 @@
               | Artyque for Collectors
             br
             h4.color.c-blue.modal-lead-text
-              | Artyque for Collectors is a new kind of service that will help you to invest in art in a completely new and more rewarding way and become a true tastemaker.
+              | ARTYQUE is a new kind of agency that will help you to invest in art in a more rewarding way and become a true tastemaker.
           .container-fluid.separate-content-bottom
             .row
               .col-12.col-sm-6
-                | Putting you at the centre of the creation cycle alongside our artists, we will give you the opportunity to meet them and to buy and commission their art. You will then be able to invest in their careers by funding carefully planned artistic projects and international tours for their works to increase their value and recognition. By doing so, you will take part in setting new trends you truly believe in and become an influential player in the art world.
+                | We want to provide you with a new and easy way of investing in art, whereby investing does not only mean buying and selling works but also directly supporting the rise of your favourite artists and so, of your collection’s value. By doing so, you will take part in setting new trends you truly believe in and become an influential player in the art world.
               .col-12.col-sm-6
-                | We want to provide you with a new and easy way of investing in art, whereby investing does not only mean buying and selling works but also directly supporting the rise of your favourite artists and so, of your collection’s value.
+                | We carefully select the most promising emerging and mid-career artists across Europe, Africa and Asia for you to establish, develop or specialise your collection. We actively promote their works, organise exhibition and develop their provenance to ultimately increase their value, giving you the certainty that your investment will grow over time.
+            h4.color.c-blue.modal-lead-text
+              | Through ARTYQUE you can buy, commission and give patronage to our Artists and by doing so, you will take part in setting new trends you believe in and become an influential player in the Art world.  
       .container-bullets
         .w-100.wrapper-body-bullets.background.c-light-gray.bg-blue
           ul
             li
               |  Have access to carefully selected artists’ portfolios
             li
-              |  Be able to commission art pieces
+              |  Commission artworks 
             li
-              |  Take part in exclusive pre-sales events
+              |  Participate in exclusive pre-sale events
             li
-              |  Support your favourite artists’ growth
+              |  Support artists' growth
             li
-              |  Increase the value of your collection
-            li
-              |  Get discounts from our partners (logistic, Insurance, digital services, and more)
-            li
-              |  Participate in members-only events
+              |  Invest smart and increase the value of your collection
       .text-body.text-center.separate-content
         .body-title
           h3.title.text-center
             | Artyque For Collectors
           h4.color.c-blue.modal-lead-text
-            |  Contact us to learn more about our Membership program.
-        = link_to "Contact Us", contact_path, class: "button-primary"
+            |  Invest smart and join us in our journey to  Artists empowerment
+          = link_to "Discover Out Talents", artists_path, class: "button-primary"
