put impressum in box

--- a/app/views/pages/contact.html.slim
+++ b/app/views/pages/contact.html.slim
@@ -1,6 +1,6 @@
 .wrapper-banner#banner
   div class=['banner-content', 'position-relative', 'bg-blue-gradient']
-    .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible
+    .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible.m-0
       = inline_svg "top_wave.svg", class: "wave-top position-absolute fill-pink"
       = inline_svg "bottom_wave.svg", class: "small-wave-bottom wave-bottom position-absolute fill-pink"
       .col-12.col-md-6.text-shadow-light.c-pink
