--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -1,18 +1,19 @@
 .wrapper-banner#banner
   div class=['banner-content', 'position-relative', 'bg-blue-gradient']
-    .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible
+    .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible.m-0
       = inline_svg "top_wave.svg", class: "wave-top position-absolute fill-pink"
       = inline_svg "bottom_wave.svg", class: "wave-bottom position-absolute fill-pink"
       .col-12.col-sm-6.text-shadow-light.c-pink[style="word-wrap: break-word;"]
         h1.display-center.display-3.c-white
           | Impressum
-      .col-12.col-sm-6.text-shadow-light.c-pink
-        h2.c-white
-          | Artyque UG
-        p.mt-3
-          | Rheinsberger Str. 76/77, 10115 Berlin
-        p
-          | VAT Number: DE325205290
-        p.mb-0
-          a.c-pink[href="mailto:info@artyque.com"]
-            | info@artyque.com
+      .col-12.col-sm-6.text-shadow-light
+        .form-set
+          h2
+            | Artyque UG
+          p.mt-3
+            | Rheinsberger Str. 76/77, 10115 Berlin
+          p
+            | VAT Number: DE325205290
+          p.mb-0
+            a[href="mailto:info@artyque.com"]
+              | info@artyque.com
