Revert "put news posts in panel"
This reverts commit ac0158eefb85ba96d4138e123169739e0be52891.

--- a/app/views/news_posts/show.html.slim
+++ b/app/views/news_posts/show.html.slim
@@ -6,10 +6,9 @@
           h1.c-white = @news_post.headline
           p.c-pink = @news_post.created_at.strftime('%A, %d %B %Y')
 #main-content.container.pt-3
-  .row
+  .row.mt-3
     .col-12
-      .panel
-        = md @news_post.content
+      = md @news_post.content
   .row.mt-5
     .col-12.text-center
       - if @previous_post
