--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,4 +1,4 @@
-nav.navbar
+nav.navbar.d-block.d-sm-none
   .open-button
     a#navbar-open-button[href="#" title="Open navigation bar"]
       i.fas.fa-bars
