--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: space-between;
   height: $header-height;
+  position: fixed;
+  z-index: 1000000;
   .image{
     height: $header-height;
     @extend .flex-left;
