make header fade dynamically

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -21,6 +21,11 @@
         padding-left: 0;
         margin-left: $header-height !important;
       }
+      transition: opacity 250ms ease;
+      opacity: 1.0;
+      &.transparent{
+        opacity: 0;
+      }
     }
   }
 }
