--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
-<header class="header">
+<header class="header" data-controller="header" data-header-hidden="<%= @hidden_logo ? true : false %>" data-action="scroll@window->header#showLogo" data-target="header.header">
   <div class="image d-flex justify-content-between w-100">
     <%= link_to root_path do %>
-      <%= image_tag 'logo-header.svg', class: 'logo' unless @hidden_logo %>
+      <%= image_tag 'logo-header.svg', class: "logo #{'transparent' if @hidden_logo}", 'data-target': 'header.logo' %>
     <% end %>
     <ul class="navbar-items d-sm-flex d-none">
       <li><%= link_to "Home", root_path, class: "#{'active' if current_page?(root_path)}" %></li>
