fix up some header and navbar stuff

--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -12,11 +12,11 @@ nav.navbar.d-block.d-sm-none
       li
         = link_to 'Artists', artists_path, class: 'navbar-link'
       li
-        = link_to 'News', news_posts_path, class: 'navbar-link'
+        = link_to 'About Us', about_path, class: 'navbar-link'
       li
         = link_to 'Contact', contact_path, class: 'navbar-link'
       li
-        = link_to 'Who We Are', about_path, class: 'navbar-link'
+        = link_to 'News', news_posts_path, class: 'navbar-link'
     ul.social
       li
         a[href="https://www.instagram.com/ksenia_crm/?igshid=1j8vk08bfpfnx" target="_blank"]
