--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,9 +8,10 @@
   <ul class="legal-foot-note links">
     <h5 class="color c-white">Site Map</h5>
     <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "Contact Us", contact_path %></li>
     <li><%= link_to "Our Artists", artists_path %></li>
     <li><%= link_to "About Us", about_path %></li>
+    <li><%= link_to "Contact", contact_path %></li>
+    <li><%= link_to "News", news_posts_path %></li>
   </ul>
   <ul class="legal-foot-note links">
     <h5 class="color c-white">Account</h5>
