--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 </div> 
-<div id="content" data-controller="modal">
+<div id="content" class="mb-5" data-controller="modal">
   <%= render "shared/featured_artist" %>
   <%= render "shared/quote_block" %>
   <%= render 'shared/featured_artworks' %>
