fix up impressum

--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -9,9 +9,9 @@
       .col-12.col-sm-6.text-shadow-light
         .form-set
           h2
-            | Artyque UG
+            | ARTYQUE UG
           p.mt-3
-            | Rheinsberger Str. 76/77, 10115 Berlin
+            | Lohmühlenstraße 65, 12435 Berlin
           p
             | VAT Number: DE325205290
           p.mb-0
