Some changes in the list

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,4 +1,6 @@
 .card, .card {
+	border-radius: 28px 30px 130px;
+    overflow: hidden;
 	transition: ease all 1s;
 	margin-bottom: 20px;
 	border: 0;
