--- a/app/assets/stylesheets/components/_line_intro.scss
+++ b/app/assets/stylesheets/components/_line_intro.scss
@@ -24,6 +24,7 @@
     width: 560px;
     bottom: -310px;
     right: 0;
+	opacity: 0.5;
     border-radius: 81%;
     height: 530px;
     z-index: -2;
