--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,13 +11,13 @@
 
 <div id="about"></div>
 <%= render 'shared/about_section' %>
-<div class="laptop-carousel-wrapper">
+<!-- <div class="laptop-carousel-wrapper">
 	<div class="container">
 		<div class="col intro-laptop">
 			<h4 class="title text-center">join the artyque family</h1>
 		</div>
 	</div>
-  <%= render 'shared/carousel', laptop: true, initial: 1, height: 350, images: %w[
+  <%#= render 'shared/carousel', laptop: true, initial: 1, height: 350, images: %w[
   screen_a.png
   screen_b.png
   screen_c.png
@@ -28,4 +28,4 @@
       <%= link_to 'Get in Touch', contact_path, class: 'button-primary' %>
 		</div>
 	</div>
-</div>
+</div> -->
