comment out laptop carousel

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -17,7 +17,7 @@
 			<h4 class="title text-center">join the artyque family</h1>
 		</div>
 	</div>
-  <%= render 'shared/carousel', laptop: true, initial: 1, height: 350, images: %w[
+  <%#= render 'shared/carousel', laptop: true, initial: 1, height: 350, images: %w[
   screen_a.png
   screen_b.png
   screen_c.png
